fix layout issue

--- a/functional-site/assets/css/search.css
+++ b/functional-site/assets/css/search.css
@@ -922,6 +922,35 @@ table.search-transfer-table {
     margin-right: 10px;
 }
 
+.homology_query_seq_header {
+    width: 131px;
+}
+.homology_query_seq_field {
+    width: 120px;
+    margin-right: 9px;
+}
+.homology_subj_seq_header {
+    width: 211px;
+}
+.homology_subj_seq_field {
+    width: 200px;
+    margin-right: 9px;
+}
+.homology_position_header {
+    width: 50px;
+}
+.homology_position_field {
+    width: 40px;
+    margin-right: 9px;
+}
+.homology_numeric_header {
+    width: 60px;
+}
+.homology_numeric_field {
+    width: 50px;
+    margin-right: 9px;
+}
+
 .domain-header {
     width: 70px;
 }
